--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,11 @@
 # in the templates via {{ site.myvariable }}.
 title: Guys & Dolls
 email: info@guys-dolls.se
-description: > # this means to ignore newlines until "baseurl:"
-  Din frisörsalong i Boden. Vi säljer produkter från Davines.
+description: > # this means to ignore newlines
+  Guys & Dolls - din frisörsalong i Boden.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.guys-dolls.se" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: guysdolls
+#twitter_username: guysdolls
 
 # Build settings
 markdown: kramdown
